gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
spec:
  controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example-route
spec:
  parentRefs:
  - name: example-gateway
  hostnames:
  - "uptime.minikube.test"
  rules:
  - backendRefs:
    - name: test-uptime-kuma-svc-http
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-uptime-kuma-svc-http
spec:
  selector:
    app: test-uptime-kuma-d5q5ak3g
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
